fetchTodos함수 및 render함수 구현

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
   <div class="container">
-
     <h1 class="heading">Todos</h1>
 
     <section class="input-container">
@@ -18,23 +17,9 @@
     </section>
 
     <ul class="todos">
-      <li class="todos-item">
-        <input type="checkbox" class="todos-completed" />
-        <span class="todos-content">HTML</span>
-        <button class="todos-remove">x</button>
-      </li>
-      <li class="todos-item">
-        <input type="checkbox" class="todos-completed" />
-        <span class="todos-content">CSS</span>
-        <button class="todos-remove">x</button>
-      </li>
-      <li class="todos-item">
-        <input type="checkbox" class="todos-completed" />
-        <span class="todos-content">Javascript</span>
-        <button class="todos-remove">x</button>
-      </li>
     </ul>
 
   </div>
+  <script src="./js/app.js"></script>
 </body>
 </html>
