--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
       <button class="btn-todos">추가</button>
     </section>
 
+    <ul class="status-container">
+      <li class="status-item all selected">all</li>
+      <li class="status-item active">active</li>
+      <li class="status-item completed">completed</li>
+    </ul>
+
     <ul class="todos">
     </ul>
 
